RESOLVED FIXED202986
Interpreter: Don't assert that reference is nonnull
https://bugs.webkit.org/show_bug.cgi?id=202986
Summary Interpreter: Don't assert that reference is nonnull
Angelos Oikonomopoulos
Reported 2019-10-15 06:39:46 PDT
Interpreter: Don't assert that reference is nonnull
Attachments
Patch (1.33 KB, patch)
2019-10-15 06:46 PDT, Angelos Oikonomopoulos
no flags
Patch (1.47 KB, patch)
2019-10-15 08:15 PDT, Angelos Oikonomopoulos
no flags
Angelos Oikonomopoulos
Comment 1 2019-10-15 06:46:37 PDT
Mark Lam
Comment 2 2019-10-15 07:46:29 PDT
Comment on attachment 380982 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=380982&action=review Did you mean to get a review for this patch? If so, you should flag it as r? (see the r: box). > Source/JavaScriptCore/ChangeLog:9 > + Interpreter: Don't assert that reference is nonnull > + https://bugs.webkit.org/show_bug.cgi?id=202986 > + > + Reviewed by NOBODY (OOPS!). > + > + * interpreter/FrameTracers.h: > + (JSC::NativeCallFrameTracer::NativeCallFrameTracer): Please add a comment here to explain your change.
Angelos Oikonomopoulos
Comment 3 2019-10-15 08:15:39 PDT
Angelos Oikonomopoulos
Comment 4 2019-10-15 08:17:37 PDT
Oops. Should be better now.
Keith Miller
Comment 5 2019-10-15 08:48:29 PDT
Comment on attachment 380986 [details] Patch r=me.
WebKit Commit Bot
Comment 6 2019-10-15 09:35:12 PDT
Comment on attachment 380986 [details] Patch Clearing flags on attachment: 380986 Committed r251139: <https://trac.webkit.org/changeset/251139>
WebKit Commit Bot
Comment 7 2019-10-15 09:35:15 PDT
All reviewed patches have been landed. Closing bug.
Ling Ho
Comment 8 2019-10-15 14:28:26 PDT
Radar WebKit Bug Importer
Comment 9 2019-10-15 14:28:35 PDT
Note You need to log in before you can comment on or make changes to this bug.