Interpreter: Don't assert that reference is nonnull https://bugs.webkit.org/show_bug.cgi?id=202986

Patch by Angelos Oikonomopoulos <aoikonomopoulos@igalia.com> on 2019-10-15
Reviewed by Keith Miller.

G++ 9.2 can assume that the address of a reference is nonnull and
emits multiple warnings to that effect in --debug builds.

* interpreter/FrameTracers.h:
(JSC::NativeCallFrameTracer::NativeCallFrameTracer):

Canonical link: https://commits.webkit.org/216419@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251139 268f45cc-cd09-0410-ab3c-d52691b4dbfc